[package]
name = "md-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5.0"
base64 = "0.13.0"
hyper = { version = "0.14.20", features = ["http1", "server", "tcp"] }
mime_guess = "2.0.4"
mustache = "0.9.0"
once_cell = "1.13.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
toml = "0.5.9"
tokio = { version = "1.20.1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
