[package]
name = "md-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5.1"
base64 = "0.13.1"
hyper = { version = "0.14.22", features = ["http1", "server", "tcp"] }
mime_guess = "2.0.4"
mustache = "0.9.0"
once_cell = "1.16.0"
reqwest = { version = "0.11.12", features = ["json"] }
rpds = "0.12.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
toml = "0.5.9"
tokio = { version = "1.21.2", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
urlencoding = "2.1.2"
