[package]
name = "md-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
base64 = "0.21.0"
hyper = { version = "0.14.23", features = ["http1", "server", "tcp"] }
include_uri = "0.1.0"
mime_guess = "2.0.4"
mustache = "0.9.0"
once_cell = "1.17.0"
reqwest = { version = "0.11.14", features = ["json"] }
rpds = "0.12.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.7.1"
tokio = { version = "1.25.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
urlencoding = "2.1.2"
